<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation|screenSize"
    android:orientation="vertical">

    <TextView
        android:id="@+id/step_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/step_item_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_margin"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#000000"
        tools:text="Step 1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/media_player_height" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/thumbnail_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/media_player_height"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="#000000"
                tools:text="Description of this step" />
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_margin">

        <Button
            android:id="@+id/previous_step_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/step_item_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:background="@drawable/rounded_corner"
            android:onClick="loadPreviousStepData"
            android:padding="@dimen/standard_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

        <Button
            android:id="@+id/next_step_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/step_item_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:background="@drawable/rounded_corner"
            android:onClick="loadNextStepData"
            android:padding="@dimen/standard_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    </RelativeLayout>

</LinearLayout>
