<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ingredients_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/step_item_height"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/rounded_corner"
        android:onClick="launchIngredientsActivity"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/ingredients" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/step_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />
</LinearLayout>
